[package]
name = "cgol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.15.0", features = ["derive"] }
errata = { version = "2.1.0", features = ["color"] }
minifb = "0.25.0"
rand = "0.8.5"
rayon = "1.9.0"
